adding home and search component

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,3 +1,13 @@
-<p>
-  home works!
-</p>
+<div class="card-columns">
+  <div *ngFor="let track of newTracks" class="card">
+    <img class="card-img-top" [src]="track.images[0].url" alt="Card image cap">
+    <div class="card-body">
+      <h5 class="card-title">{{ track.name }}</h5>
+      <p class="card-text">
+        <span *ngFor="let artist of track.artists" class="badge badge-pill badge-dark">
+          {{ artist.name }}
+        </span>
+      </p>
+    </div>
+  </div>
+</div>
