--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,13 +1,3 @@
-<div class="card-columns">
-  <div *ngFor="let track of newTracks" class="card">
-    <img class="card-img-top" [src]="track.images[0].url" alt="Card image cap">
-    <div class="card-body">
-      <h5 class="card-title">{{ track.name }}</h5>
-      <p class="card-text">
-        <span *ngFor="let artist of track.artists" class="badge badge-pill badge-dark">
-          {{ artist.name }}
-        </span>
-      </p>
-    </div>
-  </div>
-</div>
+<app-loading *ngIf="loading"></app-loading>
+
+<app-cards *ngIf="!loading" [items]="newTracks"></app-cards>
