App almost finished, but automatic token generation is missing

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,3 +1,5 @@
 <app-loading *ngIf="loading"></app-loading>
 
+<app-alert *ngIf="error" [message]="errorMessage"></app-alert>
+
 <app-cards *ngIf="!loading" [items]="newTracks"></app-cards>
