--- a/src/app/components/artist/artist.component.html
+++ b/src/app/components/artist/artist.component.html
@@ -1,3 +1,51 @@
-<p>
-  artist works!
-</p>
+<app-loading *ngIf="loadingArtist"></app-loading>
+
+<div *ngIf="!loadingArtist" class="container">
+
+  <div class="row animated fadeIn fast">
+    <div class="col-2">
+      <img [src]="artist.images | noimage" alt=""
+            class="img-circle img-circle">
+    </div>
+    <div class="col">
+      <h3>{{ artist.name }}</h3>
+      <p>
+        <a [href]="artist.external_urls.spotify" target="_blank" class="pointer">
+        Go to the artist page
+      </a></p>
+    </div>
+    <div class="col-4 text-right">
+      <button routerLink="/home" class="btn btn-outline-danger">
+        back
+      </button>
+    </div>
+  </div>
+
+  <div class="row m-5 animated fadeIn">
+    <div class="col">
+      <table class="table">
+        <thead>
+          <tr>
+            <th>Image</th>
+            <th>Album</th>
+            <th>Song</th>
+            <th>Preview</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let track of topTracks">
+            <td>
+              <img [src]="track.album.images | noimage" alt="" class="img-thumb">
+            </td>
+            <td> {{ track.album.name }} </td>
+            <td> {{ track.name }} </td>
+            <td>
+              <!--<audio [src]="track.preview_url" controls></audio>-->
+              <iframe [src]="track.uri | domseguro" width="300" height="80" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
+</div>
