--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -6,4 +6,6 @@
 
 <app-loading *ngIf="loading"></app-loading>
 
+<app-alert *ngIf="error" [message]="errorMessage"></app-alert>
+
 <app-cards *ngIf="!loading" [items]="artists" class="m-5"></app-cards>
